handled detection of straight flush and made Hand comparable to determine highest hands